--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,41 @@
-todo
+<div>
+  <mat-toolbar>
+    <button mat-icon-button
+      aria-label="Example icon-button with menu icon"
+      (click)="drawer.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>OESK LAB</span>
+  </mat-toolbar>
+  <mat-drawer-container>
+    <mat-drawer #drawer [mode]="'side'">
+      <div class="command-container">
+        <button
+          mat-button
+          routerLink="pure-pipes"
+          >Pure pipes example
+        </button>
+        <button
+          mat-button
+          routerLink="virtual-scroll"
+          >Virtual scroll example
+        </button>
+        <button
+          mat-button
+          routerLink="not-virtual-scroll"
+          >Not Virtual scroll example
+        </button>
+        <button
+          mat-button
+          routerLink="onpush"
+        >OnPush example
+      </button>
+      </div>
+    </mat-drawer>
+    <mat-drawer-content>
+      <div style="width: 100%;">
+        <router-outlet></router-outlet>
+      </div>
+    </mat-drawer-content>
+  </mat-drawer-container>
+</div>
