--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,8 +42,13 @@
         </button>
         <button
           mat-button
+          routerLink="distinct-until-changed"
+          >distinctUntilChanged example
+        </button>
+        <button
+          mat-button
           routerLink="debounce-time"
-          >Memory leak example
+          >Debounce time example
         </button>
       </div>
     </mat-drawer>
